--- a/new/7.3-fpm/config/supervisor/conf.d/nginx.conf
+++ b/new/7.3-fpm/config/supervisor/conf.d/nginx.conf
@@ -6,3 +6,7 @@ autorestart=true
 priority=10
 stdout_events_enabled=true
 stderr_events_enabled=true
+startsecs=0
+redirect_stderr=true
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
