--- a/new/nginx/config/nginx.conf
+++ b/new/nginx/config/nginx.conf
@@ -24,15 +24,17 @@ http {
     ##    "specialLog" can be replaced with any name you would like to \
     ##    give to this log format.
     log_format                   specialLog '$http_x_real_ip - $remote_user [$time_local]  '
-                                 '"$request" $status $body_bytes_sent '
-                                 '"$http_referer" "$http_user_agent"';
+                                '"$request" $status $body_bytes_sent '
+                                '"$http_referer" "$http_user_agent"';
+
+    server_tokens                off;
 
     client_header_timeout        5m;
     client_body_timeout          5m;
     send_timeout                 5m;
     keepalive_timeout            65;
     keepalive_requests           100000;
-    sendfile                      on;
+    sendfile                     off;
     tcp_nopush                   on;
     tcp_nodelay                  on;
     reset_timedout_connection    on; # allows the server to close the connection after a client stops responding.
@@ -49,9 +51,7 @@ http {
     proxy_read_timeout           300;
     proxy_buffer_size            16k;
     proxy_buffering              on;
-    #proxy_buffer_size           8k;
     proxy_buffers 2048           8k;
-
 
     client_body_temp_path        /tmp/nginx/body 1 2;
     fastcgi_temp_path            /tmp/nginx/fastcgi_temp 1 2;
@@ -81,6 +81,10 @@ http {
     open_file_cache_valid        30s;
     open_file_cache_min_uses     5;
     open_file_cache_errors       off;
+
+    # Add stdout logging
+	error_log /dev/stdout info;
+	access_log /dev/stdout;
 
     include /etc/nginx/conf.d/*.conf;
 }
