new configs for NGINX and improved supervisor configs

--- a/new/7.3-fpm/Dockerfile
+++ b/new/7.3-fpm/Dockerfile
@@ -24,7 +24,10 @@ RUN apk update                       && \
     apk upgrade                      && \
     apk add --no-cache                  \
     supervisor \
-    rm -rf /tmp/* /var/cache/apk/*
+    rm -rf /tmp/* /var/cache/apk/* && \
+    mv /var/www/html/index.html /var/www/html/index.php && \
+    echo '<?php phpinfo(); ?>' >> /var/www/html/index.php && \
+    sed 's/#include/include/g' /etc/nginx/conf.d/default.conf
 
 COPY config/supervisor /etc/supervisor
 
