--- a/new/7.3-fpm/config/supervisor/conf.d/php.conf
+++ b/new/7.3-fpm/config/supervisor/conf.d/php.conf
@@ -1,6 +1,6 @@
 [program:php-fpm]
 process_name=%(program_name)s_%(process_num)02d
-command=/usr/sbin/php-fpm7 -R -F -c /etc/php/fpm/php-fpm.conf
+command=/usr/sbin/php-fpm7 -R -F
 autostart=true
 autorestart=true
 priority=5
