--- a/new/7.3-fpm/config/supervisor/supervisor.conf
+++ b/new/7.3-fpm/config/supervisor/supervisor.conf
@@ -2,7 +2,7 @@
 #logfile=/var/log/supervisord.log ; (main log file;default $CWD/supervisord.log)
 #logfile_maxbytes=50MB            ; (max main logfile bytes b4 rotation;default 50MB)
 #logfile_backups=10               ; (num of main logfile rotation backups;default 10)
-loglevel=info                   ; (log level;default info; others: debug,warn,trace)
+loglevel=trace                   ; (log level;default info; others: debug,warn,trace)
 pidfile=/var/run/supervisord.pid ; (supervisord pidfile;default supervisord.pid)
 nodaemon=false                  ; (start in foreground if true;default false)
 minfds=1024                     ; (min. avail startup file descriptors;default 1024)
