--- a/new/nginx/config/conf.d/default.conf
+++ b/new/nginx/config/conf.d/default.conf
@@ -1,18 +1,18 @@
 include /etc/nginx/security/lists/blocked_bots.conf;
 include /etc/nginx/security/lists/globalblacklist.conf;
+include /etc/nginx/conf.d/cache_config.conf;
 
 server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-	root /var/www/html;
+    include /etc/nginx/conf.d/variables.conf;
+
+	root $main_root_path;
     index index.php index.html;
 
 	# Make site accessible from http://localhost/
 	server_name localhost;
-
-	# Disable sendfile as per https://docs.vagrantup.com/v2/synced-folders/virtualbox.html
-	sendfile off;
 
 	location / {
         # try to serve file directly, fallback to app.php
@@ -58,8 +58,8 @@ server {
         deny all;
 	}
 
-    include /etc/nginx/security/lists/block-injections.conf;
+    include /etc/nginx/security/block-injections.conf;
 
     include /etc/nginx/conf.d/custom.conf;
-    include /etc/nginx/conf.d/php-fpm.conf;
+    #include /etc/nginx/conf.d/php-fpm.conf;
 }
