--- a/new/nginx/config/nginx.conf
+++ b/new/nginx/config/nginx.conf
@@ -86,5 +86,5 @@ http {
 	error_log /dev/stdout info;
 	access_log /dev/stdout;
 
-    include /etc/nginx/conf.d/*.conf;
+    include /etc/nginx/conf.d/default.conf;
 }
