Improved nginx configurations and better integration

--- a/new/nginx/config/conf.d/default.conf
+++ b/new/nginx/config/conf.d/default.conf
@@ -8,7 +8,7 @@ server {
 
     include /etc/nginx/conf.d/variables.conf;
 
-	root $main_root_path;
+	root /$main_root_path;
     index index.php index.html;
 
 	# Make site accessible from http://localhost/
