--- a/new/nginx/config/conf.d/php-fpm.conf
+++ b/new/nginx/config/conf.d/php-fpm.conf
@@ -9,8 +9,8 @@ location ~ \.php$ {
     fastcgi_keep_conn on;
 
     # Uncomment if using UNIX socket
-    fastcgi_pass /var/run/php-fpm.sock;
-    #fastcgi_pass localhost:9000;
+    # fastcgi_pass /var/run/php-fpm.sock;
+    fastcgi_pass localhost:9000;
 
     fastcgi_split_path_info ^(.+\.php)(/.*)$;
     include fastcgi_params;
