--- a/new/7.4-fpm/Dockerfile
+++ b/new/7.4-fpm/Dockerfile
@@ -2,6 +2,13 @@ FROM jeffersonsouza/nginx:alpine as php
 
 LABEL maintainer="Jefferson Souza<hsinfo@gmail.com>"
 
+ADD https://dl.bintray.com/php-alpine/key/php-alpine.rsa.pub /etc/apk/keys/php-alpine.rsa.pub
+
+# https://github.com/Hermsi1337/docker-fpm-php/blob/master/conf.d/
+# https://github.com/codecasts/php-alpine
+RUN apk --update add ca-certificates && \
+    echo "https://dl.bintray.com/php-alpine/v3.10/php-7.4" >> /etc/apk/repositories
+
 RUN apk update                       && \
     apk upgrade                      && \
     apk add --no-cache                  \
@@ -15,9 +22,22 @@ RUN apk update                       && \
     php7-pdo                                                 \
     php7-pdo_mysql                                           \
     php7-redis                                               \
-    php7-gd
+    php7-gd \
+    php7-json \
+    php7-zip \
+    php7-dom \
+    php7-xml \
+    php7-simplexml \
+    php7-mbstring \
+    php7-curl \
+    php7-ctype \
+    php7-apcu \
+    php7-zlib \
+    php7-opcache && \
+    ln -s /usr/sbin/php-fpm7 /usr/local/bin/php && \
+    mkdir /run/php/ && chown -R nginx.www-data /run/php/
 
-COPY config/fpm /etc/php/fpm
+COPY config/fpm/php-fpm.conf /etc/php7/php-fpm.d/custom.conf
 
 FROM php as supervisor
 
