--- a/new/nginx/config/nginx.conf
+++ b/new/nginx/config/nginx.conf
@@ -1,4 +1,4 @@
-user                             nginx;
+user                             www-data;
 worker_processes                 auto;
 
 # run nginx in foreground
@@ -53,9 +53,6 @@ http {
     proxy_buffering              on;
     proxy_buffers 2048           8k;
 
-    client_body_temp_path        /tmp/nginx/body 1 2;
-    fastcgi_temp_path            /tmp/nginx/fastcgi_temp 1 2;
-
     # Session
     ssl_session_tickets off;
 
@@ -75,7 +72,7 @@ http {
     gzip_buffers 32 16k;
     gzip_http_version 1.1;
     gzip_min_length 250;
-    gzip_types image/jpeg image/bmp image/svg+xml text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon;
+    gzip_types image/jpeg image/bmp image/svg+xml text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/svg+xml/javascript;
 
     open_file_cache              max=1000 inactive=20s;
     open_file_cache_valid        30s;
@@ -86,5 +83,12 @@ http {
 	error_log /dev/stdout info;
 	access_log /dev/stdout;
 
-    include /etc/nginx/conf.d/default.conf;
+    # Write temporary files to /tmp so they can be created as a non-privileged user
+    client_body_temp_path /tmp/client_temp;
+    proxy_temp_path /tmp/proxy_temp_path;
+    fastcgi_temp_path /tmp/fastcgi_temp;
+    uwsgi_temp_path /tmp/uwsgi_temp;
+    scgi_temp_path /tmp/scgi_temp;
+
+    include /etc/nginx/http.d/default.conf;
 }
