--- a/new/7.4-fpm/config/supervisor/conf.d/php.conf
+++ b/new/7.4-fpm/config/supervisor/conf.d/php.conf
@@ -1,9 +1,10 @@
-[program:nginx]
+[program:php-fpm]
 process_name=%(program_name)s_%(process_num)02d
-command=/usr/sbin/nginx -g 'daemon off;'
+# command=/usr/sbin/php-fpm7 -R -F
+command=/bin/sh -c "php-fpm7 --nodaemonize || (echo 'php-fpm exited.' && pkill -9 supervisord)"
 autostart=true
 autorestart=true
-priority=10
+priority=5
 stdout_events_enabled=true
 stderr_events_enabled=true
 startsecs=0
