--- a/new/8-fpm/config/supervisor/conf.d/php.conf
+++ b/new/8-fpm/config/supervisor/conf.d/php.conf
@@ -1,6 +1,7 @@
 [program:php-fpm]
 process_name=%(program_name)s_%(process_num)02d
-command=/usr/sbin/php-fpm7 -R -F
+# command=/usr/sbin/php-fpm7 -R -F
+command=/bin/sh -c "php-fpm8 --nodaemonize || (echo 'php-fpm exited.' && pkill -9 supervisord)"
 autostart=true
 autorestart=true
 priority=5
