--- a/new/nginx/config/http.d/php-fpm.conf
+++ b/new/nginx/config/http.d/php-fpm.conf
@@ -1,4 +1,14 @@
 # PROD
+ # Allow fpm ping and status from localhost
+location ~ ^/(fpm-status|fpm-ping)$ {
+    access_log off;
+    allow 127.0.0.1;
+    deny all;
+    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+    include fastcgi_params;
+    fastcgi_pass 127.0.0.1:9000;
+}
+
 location ~ \.php$ {
 
     if (!-f $document_root$fastcgi_script_name) {
