Upgraded Alpine version, Nginx Version and main config files;

--- a/new/nginx/Dockerfile
+++ b/new/nginx/Dockerfile
@@ -1,22 +1,23 @@
-FROM alpine:3.13 as nginx
-LABEL	maintainer="Jefferson Souza"
+FROM alpine:3.14 as nginx
+LABEL maintainer="Jefferson Souza<hsinfo@gmail.com>"
 
-RUN adduser -D -u 1000 -g 1000 -s /bin/sh www-data && \
-    apk update && \
-    apk upgrade && \
-    apk add --no-cache \
+RUN adduser -D -H -u 1000 -s /bin/bash www-data -G www-data \
+    && apk update \
+    && apk upgrade \
+    && apk add --no-cache \
     nginx \
     nginx-mod-http-geoip \
     nginx-mod-http-cache-purge \
     nginx-mod-http-headers-more \
-    nginx-mod-http-upload-progress && \
-    mkdir -p /var/www && \
-    chown -R www-data:www-data /var/www && \
-    mkdir -p /var/cache/nginx && \
-    mkdir -p /var/tmp/nginx && \
-    chown -R www-data:www-data /var/cache/nginx && \
-    chown -R www-data:www-data /var/lib/nginx && \
-    chown -R www-data:www-data /var/tmp/nginx
+    nginx-mod-http-upload-progress \
+    && mkdir -p /var/www \
+    && chown -R www-data:www-data /var/www \
+    && mkdir -p /var/cache/nginx \
+    && mkdir -p /var/tmp/nginx \
+    && chown -R www-data:www-data /var/cache/nginx \
+    && chown -R www-data:www-data /var/lib/nginx \
+    && chown -R www-data:www-data /var/tmp/nginx \
+    && rm -rf /tmp/* /var/cache/apk/*
 
 COPY config /etc/nginx
 COPY index.html /var/www/html/index.html
