--- a/new/nginx/config/http.d/default.conf
+++ b/new/nginx/config/http.d/default.conf
@@ -1,12 +1,12 @@
 include /etc/nginx/security/lists/blocked_bots.conf;
 include /etc/nginx/security/lists/globalblacklist.conf;
-include /etc/nginx/conf.d/cache_config.conf;
+include /etc/nginx/http.d/cache_config.conf;
 
 server {
 	listen   80; ## listen for ipv4; this line is default and implied
 	listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
-    include /etc/nginx/conf.d/variables.conf;
+    include /etc/nginx/http.d/variables.conf;
 
 	root /$main_root_path;
     index index.php index.html;
@@ -60,6 +60,6 @@ server {
 
     include /etc/nginx/security/block-injections.conf;
 
-    include /etc/nginx/conf.d/custom.conf;
-    #include /etc/nginx/conf.d/php-fpm.conf;
+    include /etc/nginx/http.d/custom.conf;
+    #include /etc/nginx/http.d/php-fpm.conf;
 }
