--- a/new/nginx/config/http.d/php-fpm.conf
+++ b/new/nginx/config/http.d/php-fpm.conf
@@ -1,5 +1,5 @@
 # PROD
- # Allow fpm ping and status from localhost
+# Allow fpm ping and status from localhost
 location ~ ^/(fpm-status|fpm-ping)$ {
     access_log off;
     allow 127.0.0.1;
@@ -11,6 +11,8 @@ location ~ ^/(fpm-status|fpm-ping)$ {
 
 location ~ \.php$ {
 
+    include /etc/nginx/http.d/cache_config.conf;
+
     if (!-f $document_root$fastcgi_script_name) {
         return 404;
     }
@@ -20,7 +22,7 @@ location ~ \.php$ {
 
     # Uncomment if using UNIX socket
     # fastcgi_pass /var/run/php-fpm.sock;
-    fastcgi_pass localhost:9000;
+    fastcgi_pass 127.0.0.1:9000;
 
     fastcgi_split_path_info ^(.+\.php)(/.*)$;
     include fastcgi_params;
