--- a/new/nginx/config/nginx.conf
+++ b/new/nginx/config/nginx.conf
@@ -90,5 +90,8 @@ http {
     uwsgi_temp_path /tmp/uwsgi_temp;
     scgi_temp_path /tmp/scgi_temp;
 
+    fastcgi_cache_path /usr/share/nginx/fastcgi_cache levels=1:2 keys_zone=phpcache:100m max_size=10g inactive=60m use_temp_path=off;
+    fastcgi_cache_key "$scheme$request_method$host$request_uri";
+
     include /etc/nginx/http.d/default.conf;
 }
