Improved NGINX configuration
- Normalized file structure and indents;
- Improved fastCGI cache configurations;
- Added support to PURGE cache;
- Added Cache Status to access log;

--- a/new/8-fpm/config/fpm/php-fpm.conf
+++ b/new/8-fpm/config/fpm/php-fpm.conf
@@ -43,6 +43,7 @@ ping.path = /fpm-ping
 
 ; Normals can be
 php_flag[display_errors] = off
+php_flag[expose_php] = off
 
 ; this should match FPM_PROCESS_MEMORY_MB in /auto-fpm.sh
 php_value[memory_limit] = 128M
