--- a/new/nginx/config/http.d/default.conf
+++ b/new/nginx/config/http.d/default.conf
@@ -1,21 +1,40 @@
 include /etc/nginx/security/lists/blocked_bots.conf;
 include /etc/nginx/security/lists/globalblacklist.conf;
-include /etc/nginx/http.d/cache_config.conf;
+
+map $request_method $cache_purge {
+    PURGE 1;
+    default 0;
+}
+
+map $sent_http_content_type $expires {
+    default                 off;
+    text/html               epoch;
+    text/css                30d;
+    application/javascript  30d;
+    font/woff2              max;
+    font/woff               max;
+    image/x-icon            max;
+    application/font-woff2  max;
+}
 
 server {
-	listen   80; ## listen for ipv4; this line is default and implied
-	listen   [::]:80 default ipv6only=on; ## listen for ipv6
+    listen   80; ## listen for ipv4; this line is default and implied
+    listen   [::]:80 default ipv6only=on; ## listen for ipv6
 
     include /etc/nginx/http.d/variables.conf;
 
-	root /$main_root_path;
+    root $main_root_path;
     index index.php index.html;
 
-	# Make site accessible from http://localhost/
-	server_name localhost;
+    # Make site accessible from http://localhost/
+    server_name _;
 
-	location / {
-        # try to serve file directly, fallback to app.php
+    location ~ /purge(/.*) {
+        fastcgi_cache_purge phpcache "$scheme$request_method$host$1";
+    }
+
+    location / {
+        # try to serve file directly, fallback to index.php
         # try_files $uri /index.php$is_args$args;
         try_files $uri $uri/ /index.php?$args;
     }
@@ -26,7 +45,7 @@ server {
     if ($bad_words = 3) { return 444; }
     if ($bad_referer = 1) { return 444; }
 
-	error_page 404 /404.html;
+    error_page 404 /404.html;
 
     location = /404.html {
         root /var/www/errors;
@@ -36,15 +55,19 @@ server {
     location ^~ /ngd-style.css {
         alias /var/www/errors/style.css;
         access_log off;
+        log_not_found off;
     }
 
     location ^~ /ngd-sad.svg {
         alias /var/www/errors/sad.svg;
         access_log off;
+        log_not_found off;
     }
 
     location ~* \.(jpg|jpeg|gif|css|png|js|ico|html)$ {
         access_log off;
+        log_not_found off;
+
         expires max;
     }
 
@@ -53,10 +76,10 @@ server {
     }
 
     # deny access to . files, for security
-	location ~ /\. {
+    location ~ /\. {
         log_not_found off;
         deny all;
-	}
+    }
 
     include /etc/nginx/security/block-injections.conf;
 
