--- a/new/nginx/config/http.d/php-fpm.conf
+++ b/new/nginx/config/http.d/php-fpm.conf
@@ -10,7 +10,7 @@ location ~ ^/(fpm-status|fpm-ping)$ {
 }
 
 location ~ \.php$ {
-
+    # comment above line to disable fastcgi_cache
     include /etc/nginx/http.d/cache_config.conf;
 
     if (!-f $document_root$fastcgi_script_name) {
