--- a/new/nginx/config/nginx.conf
+++ b/new/nginx/config/nginx.conf
@@ -1,3 +1,7 @@
+load_module modules/ngx_http_cache_purge_module.so;
+load_module modules/ngx_http_brotli_filter_module.so;
+load_module modules/ngx_http_brotli_static_module.so;
+
 user                             www-data;
 worker_processes                 auto;
 
@@ -23,7 +27,7 @@ http {
     ##    not just the reverse proxy server's IP address. Also note, that \
     ##    "specialLog" can be replaced with any name you would like to \
     ##    give to this log format.
-    log_format                   specialLog '$http_x_real_ip - $remote_user [$time_local]  '
+    log_format                   specialLog '$http_x_real_ip - $remote_user - $upstream_cache_status [$time_local]  '
                                 '"$request" $status $body_bytes_sent '
                                 '"$http_referer" "$http_user_agent"';
 
@@ -74,14 +78,19 @@ http {
     gzip_min_length 250;
     gzip_types image/jpeg image/bmp image/svg+xml text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/x-icon image/svg+xml/javascript;
 
+    # Brotli Settings
+    brotli on;
+    brotli_comp_level 6;
+    brotli_types text/xml image/svg+xml application/x-font-ttf image/vnd.microsoft.icon application/x-font-opentype application/json font/eot application/vnd.ms-fontobject application/javascript font/otf application/xml application/xhtml+xml text/javascript  application/x-javascript text/plain application/x-font-truetype application/xml+rss image/x-icon font/opentype text/css image/x-win-bitmap;
+
     open_file_cache              max=1000 inactive=20s;
     open_file_cache_valid        30s;
     open_file_cache_min_uses     5;
     open_file_cache_errors       off;
 
     # Add stdout logging
-	error_log /dev/stdout info;
-	access_log /dev/stdout;
+    error_log /dev/stdout info;
+    access_log /dev/stdout specialLog;
 
     # Write temporary files to /tmp so they can be created as a non-privileged user
     client_body_temp_path /tmp/client_temp;
@@ -90,8 +99,11 @@ http {
     uwsgi_temp_path /tmp/uwsgi_temp;
     scgi_temp_path /tmp/scgi_temp;
 
+    # FastCGI cache config
     fastcgi_cache_path /usr/share/nginx/fastcgi_cache levels=1:2 keys_zone=phpcache:100m max_size=10g inactive=60m use_temp_path=off;
     fastcgi_cache_key "$scheme$request_method$host$request_uri";
+    fastcgi_cache_use_stale error timeout invalid_header http_500;
+    fastcgi_ignore_headers X-Accel-Expires Cache-Control Expires Set-Cookie Vary;
 
     include /etc/nginx/http.d/default.conf;
 }
