--- a/.github/workflows/docker-publish-php81.yml
+++ b/.github/workflows/docker-publish-php81.yml
@@ -55,5 +55,5 @@ jobs:
         with:
           context: ./new/8.1-fpm/
           push: ${{ github.event_name != 'pull_request' }}
-          tags: 8.1-nginx
+          tags: ${{ env.IMAGE_NAME }}:8.1-nginx
           labels: ${{ steps.meta.outputs.labels }}
