Improvements on PHP 8.2 image

--- a/new/8.2-fpm/Dockerfile
+++ b/new/8.2-fpm/Dockerfile
@@ -51,7 +51,8 @@ RUN apk update && \
     rm -rf /tmp/* /var/cache/apk/* && \
     mv /var/www/html/index.html /var/www/html/index.php && \
     echo '<?php phpinfo(); ?>' >> /var/www/html/index.php && \
-    sed -i 's/#include/include/g' /etc/nginx/http.d/default.conf
+    sed -i 's/#include/include/g' /etc/nginx/http.d/default.conf && \
+    ln -s /usr/bin/php82 /usr/bin/php
 
 COPY config/supervisor /etc/supervisor
 
