added php82-pdo_sqlite php82-iconv and php82-phar dependencies

--- a/new/8.2-fpm/Dockerfile
+++ b/new/8.2-fpm/Dockerfile
@@ -33,6 +33,9 @@ RUN apk update && \
     php82-zlib \
     php82-tokenizer \
     php82-fileinfo \
+    php82-pdo_sqlite \
+    php82-iconv \
+    php82-phar \
     # php82-brotli \
     php82-opcache && \
     rm -rf /tmp/* /var/cache/apk/* && \
