Added PHP 8.3 support

--- a/new/nginx/config/http.d/php-fpm.conf
+++ b/new/nginx/config/http.d/php-fpm.conf
@@ -24,6 +24,11 @@ location ~ \.php$ {
     # fastcgi_pass /var/run/php-fpm.sock;
     fastcgi_pass 127.0.0.1:9000;
 
+    server_tokens off;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
+
     fastcgi_split_path_info ^(.+\.php)(/.*)$;
     include fastcgi_params;
 
