--- a/new/nginx/config/nginx.conf
+++ b/new/nginx/config/nginx.conf
@@ -1,3 +1,4 @@
+load_module modules/ngx_http_headers_more_filter_module.so;
 load_module modules/ngx_http_cache_purge_module.so;
 load_module modules/ngx_http_brotli_filter_module.so;
 load_module modules/ngx_http_brotli_static_module.so;
@@ -61,7 +62,7 @@ http {
     ssl_session_tickets off;
 
     # TLS
-    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1.3;
 
     # Resolvers
     resolver 8.8.8.8 8.8.4.4 valid=300s;
