--- a/new/8.4-fpm/Dockerfile
+++ b/new/8.4-fpm/Dockerfile
@@ -8,40 +8,40 @@ RUN apk --update add ca-certificates
 RUN apk update && \
     apk upgrade && \
     apk add --no-cache \
-    php82 \
-    php82-common \
-    php82-fpm \
-    php82-sodium \
-    php82-intl \
-    php82-bcmath \
-    php82-mysqli \
-    php82-pdo \
-    php82-pdo_mysql \
-    php82-redis \
-    php82-gd \
-    php82-json \
-    php82-zip \
-    php82-dom \
-    php82-xml \
-    php82-simplexml \
-    php82-xmlwriter \
-    php82-mbstring \
-    php82-curl \
-    php82-ctype \
-    # php82-pecl-imagick \
-    php82-pecl-redis \
-    php82-zlib \
-    php82-tokenizer \
-    php82-fileinfo \
-    php82-pdo_sqlite \
-    php82-iconv \
-    php82-phar \
-    # php82-brotli \
-    php82-opcache && \
+    php83 \
+    php84-common \
+    php84-fpm \
+    php84-sodium \
+    php84-intl \
+    php84-bcmath \
+    php84-mysqli \
+    php84-pdo \
+    php84-pdo_mysql \
+    php84-redis \
+    php84-gd \
+    php84-json \
+    php84-zip \
+    php84-dom \
+    php84-xml \
+    php84-simplexml \
+    php84-xmlwriter \
+    php84-mbstring \
+    php84-curl \
+    php84-ctype \
+    php84-pecl-imagick \
+    php84-pecl-redis \
+    php84-zlib \
+    php84-tokenizer \
+    php84-fileinfo \
+    php84-pdo_sqlite \
+    php84-iconv \
+    php84-phar \
+    php84-pecl-brotli \
+    php84-opcache && \
     rm -rf /tmp/* /var/cache/apk/* && \
-    mkdir /run/php/ && chown -R nginx.www-data /run/php/
+    mkdir /run/php/ && chown -R www-data:www-data /run/php/
 
-COPY config/fpm/php-fpm.conf /etc/php82/php-fpm.d/custom.conf
+COPY config/fpm/php-fpm.conf /etc/php84/php-fpm.d/custom.conf
 
 FROM php as supervisor
 
@@ -54,7 +54,7 @@ RUN apk update && \
     mv /var/www/html/index.html /var/www/html/index.php && \
     echo '<?php phpinfo(); ?>' >> /var/www/html/index.php && \
     sed -i 's/#include/include/g' /etc/nginx/http.d/default.conf && \
-    ln -s /usr/bin/php83 /usr/bin/php && \
+#    ln -s /usr/bin/php84 /usr/bin/php && \
     php -v
 
 COPY config/supervisor /etc/supervisor
