Improved PHP Settings

--- a/new/8.3-fpm/config/fpm/php-fpm.conf
+++ b/new/8.3-fpm/config/fpm/php-fpm.conf
@@ -50,6 +50,7 @@ php_value[memory_limit] = 128M
 php_value[upload_max_filesize] = 32M
 php_value[post_max_size] = 35M
 php_value[default_socket_timeout] = 300
+php_value[variables_order] = "EGPCS"
 php_value[opcache.enable] = 1
 php_value[opcache.revalidate_freq] = 2
 php_value[opcache.validate_timestamps] = 1
